; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_fmd_api.c_fmd_case_add_suspect.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_fmd_api.c_fmd_case_add_suspect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }

@FMD_SLEEP = common dso_local global i32 0, align 4
@FM_VERSION = common dso_local global i32 0, align 4
@FM_SUSPECT_VERSION = common dso_local global i32 0, align 4
@FM_CLASS = common dso_local global i32 0, align 4
@FM_LIST_SUSPECT_CLASS = common dso_local global i8* null, align 8
@FM_SUSPECT_UUID = common dso_local global i32 0, align 4
@FM_SUSPECT_DIAG_CODE = common dso_local global i32 0, align 4
@FM_SUSPECT_DIAG_TIME = common dso_local global i32 0, align 4
@FM_SUSPECT_FAULT_SZ = common dso_local global i32 0, align 4
@FM_SUSPECT_FAULT_LIST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"failed to populate nvlist\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fmd_case_add_suspect(i32* %0, %struct.TYPE_4__* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca [2 x i32], align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i8* @fmd_fault_mkcode(i32* %11)
  store i8* %12, i8** %8, align 8
  store i32 0, i32* %10, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = call i32 @gettimeofday(%struct.TYPE_5__* %14, i32* null)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 0
  store i32 %19, i32* %20, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 1
  store i32 %24, i32* %25, align 4
  %26 = load i32*, i32** %4, align 8
  %27 = load i32, i32* @FMD_SLEEP, align 4
  %28 = call i32* @fmd_nvl_alloc(i32* %26, i32 %27)
  store i32* %28, i32** %7, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i32, i32* @FM_VERSION, align 4
  %31 = load i32, i32* @FM_SUSPECT_VERSION, align 4
  %32 = call i32 @nvlist_add_uint8(i32* %29, i32 %30, i32 %31)
  %33 = load i32, i32* %10, align 4
  %34 = or i32 %33, %32
  store i32 %34, i32* %10, align 4
  %35 = load i32*, i32** %7, align 8
  %36 = load i32, i32* @FM_CLASS, align 4
  %37 = load i8*, i8** @FM_LIST_SUSPECT_CLASS, align 8
  %38 = call i32 @nvlist_add_string(i32* %35, i32 %36, i8* %37)
  %39 = load i32, i32* %10, align 4
  %40 = or i32 %39, %38
  store i32 %40, i32* %10, align 4
  %41 = load i32*, i32** %7, align 8
  %42 = load i32, i32* @FM_SUSPECT_UUID, align 4
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  %45 = load i8*, i8** %44, align 8
  %46 = call i32 @nvlist_add_string(i32* %41, i32 %42, i8* %45)
  %47 = load i32, i32* %10, align 4
  %48 = or i32 %47, %46
  store i32 %48, i32* %10, align 4
  %49 = load i32*, i32** %7, align 8
  %50 = load i32, i32* @FM_SUSPECT_DIAG_CODE, align 4
  %51 = load i8*, i8** %8, align 8
  %52 = call i32 @nvlist_add_string(i32* %49, i32 %50, i8* %51)
  %53 = load i32, i32* %10, align 4
  %54 = or i32 %53, %52
  store i32 %54, i32* %10, align 4
  %55 = load i32*, i32** %7, align 8
  %56 = load i32, i32* @FM_SUSPECT_DIAG_TIME, align 4
  %57 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 0
  %58 = call i32 @nvlist_add_int64_array(i32* %55, i32 %56, i32* %57, i32 2)
  %59 = load i32, i32* %10, align 4
  %60 = or i32 %59, %58
  store i32 %60, i32* %10, align 4
  %61 = load i32*, i32** %7, align 8
  %62 = load i32, i32* @FM_SUSPECT_FAULT_SZ, align 4
  %63 = call i32 @nvlist_add_uint32(i32* %61, i32 %62, i32 1)
  %64 = load i32, i32* %10, align 4
  %65 = or i32 %64, %63
  store i32 %65, i32* %10, align 4
  %66 = load i32*, i32** %7, align 8
  %67 = load i32, i32* @FM_SUSPECT_FAULT_LIST, align 4
  %68 = call i32 @nvlist_add_nvlist_array(i32* %66, i32 %67, i32** %6, i32 1)
  %69 = load i32, i32* %10, align 4
  %70 = or i32 %69, %68
  store i32 %70, i32* %10, align 4
  %71 = load i32, i32* %10, align 4
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %75

73:                                               ; preds = %3
  %74 = call i32 @zed_log_die(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %75

75:                                               ; preds = %73, %3
  %76 = load i32*, i32** %6, align 8
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %78 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %77, i32 0, i32 0
  %79 = load i8*, i8** %78, align 8
  %80 = load i8*, i8** %8, align 8
  %81 = call i32 @zed_log_fault(i32* %76, i8* %79, i8* %80)
  %82 = load i8*, i8** @FM_LIST_SUSPECT_CLASS, align 8
  %83 = load i32*, i32** %7, align 8
  %84 = call i32 @zfs_agent_post_event(i8* %82, i32* null, i32* %83)
  %85 = load i32*, i32** %7, align 8
  %86 = call i32 @nvlist_free(i32* %85)
  %87 = load i32*, i32** %6, align 8
  %88 = call i32 @nvlist_free(i32* %87)
  ret void
}

declare dso_local i8* @fmd_fault_mkcode(i32*) #1

declare dso_local i32 @gettimeofday(%struct.TYPE_5__*, i32*) #1

declare dso_local i32* @fmd_nvl_alloc(i32*, i32) #1

declare dso_local i32 @nvlist_add_uint8(i32*, i32, i32) #1

declare dso_local i32 @nvlist_add_string(i32*, i32, i8*) #1

declare dso_local i32 @nvlist_add_int64_array(i32*, i32, i32*, i32) #1

declare dso_local i32 @nvlist_add_uint32(i32*, i32, i32) #1

declare dso_local i32 @nvlist_add_nvlist_array(i32*, i32, i32**, i32) #1

declare dso_local i32 @zed_log_die(i8*) #1

declare dso_local i32 @zed_log_fault(i32*, i8*, i8*) #1

declare dso_local i32 @zfs_agent_post_event(i8*, i32*, i32*) #1

declare dso_local i32 @nvlist_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
